# substreams-cookbook

./: .gitignore  Cargo.toml  NOTES.md  README.md
.github/workflows/: ci.yml  substreams.yml
erc20/: Cargo.toml  Makefile  README.md  schema.graphql  subgraph.yaml  substreams.yaml
erc20/proto/v1/: erc20.proto
erc20/src/: lib.rs  maps.rs  sinks.rs
erc20/src/pb/: erc20.types.v1.rs  erc20.v1.rs  mod.rs
examples/erc20/: substreams.yaml
examples/erc20/src/: lib.rs  maps.rs  sinks.rs  utils.rs
examples/erc20/src/pb/: erc20.types.v1.rs  mod.rs
patterns/: 1. Dynamic data sources.md  10. Creating and Updating Subgraph entities.md  2. Parameterization of Factory contract.md  3. Advanced parameteres  3. Advanced parameters.md  4. Using keys in stores.md  5. Freeing up unused keys in stores.md  X. Decipher method calls.md  X. Parsing call logs.md  X. Parsing storage changes.md
