[package]
name = "erc20"
version = "0.1.0"
description = "ERC-20"
edition = "2021"
authors = [
    "Denis <denis@pinax.network>",
    "Yaro <yaro@pinax.network>"
]

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-ethereum = { workspace = true }
substreams-entity-change = { workspace = true }
